# stanag-dli

./: .gitignore  CMakeLists.txt  Makefile  README.md  multicast_bridge  pyproject.toml
cmake/: dliConfig.cmake.in
definitions/common/: capabilities.sdli  policies.sdli  types.sdli
definitions/messages/: 00001_CUCSAuthorisationRequest.sdli  00002_VSMAuthorisationResponse.sdli  00003_VehicleID.sdli  00004_PositiveHandoverAuthorisationRequest.sdli  00005_PositiveHandoverAuthorisationGranted.sdli  02000_VehicleConfigurationCommand.sdli  02007_UnmannedAircraftLights.sdli  02008_EngineCommand.sdli  02010_UAStickCommand.sdli  02016_VehicleOperatingModeCommand.sdli  02017_LoiterConfiguration.sdli  03001_VehicleOperatingModeReport.sdli  03002_VehicleOperatingStates.sdli  03004_LoiterConfigurationReport.sdli  03006_VehicleLightsState.sdli  03007_EngineOperatingStates.sdli  03011_UAStickStatus.sdli  04000_InertialStates.sdli  04001_FromToNextWaypointStates.sdli  13002_UAPositionWaypoint.sdli  16002_Heartbeat.sdli  17000_MessageAcknowledgement.sdli
definitions/profiles/: Custom_Tactical.profile  LOI2_Monitor.profile  LOI4_UA_Control.profile
docs/: AEP_84_Compliance_Report.md  ICS_Report.md  architecture.md  technical_backlog.md  walkthrough.md
examples/: multicast_bridge.cpp  profile_test.cpp
examples/adapters/udp/: UdpTransport.cpp  UdpTransport.hpp
generator/: dissector_gen.py  dli_gen.py  dli_gen_python.py  ics_gen.py  profile_gen.py  validation.py
generator/templates/: message.hpp.template  message.py.template
generator/tests/: validation_test.py
idl/cpp/dli/core/: BitCursor.hpp
idl/cpp/dli/protocol/: DliHeader.hpp
idl/cpp/dli/session/: DliSession.cpp  DliSession.hpp
idl/cpp/dli/transport/: MulticastTransport.cpp  MulticastTransport.hpp
idl/cpp/examples/: multicast_bridge.cpp  profile_test.cpp
idl/cpp/tests/: session_test.cpp  smoke_test.cpp  transport_test.cpp
idl/lua/: dli.lua
idl/python/dli/: __init__.py
idl/python/dli/core/: __init__.py  bit_cursor.py  checksum.py  logger.py
idl/python/dli/protocol/: __init__.py  dispatcher.py  header.py  message.py  profile.py
idl/python/dli/session/: __init__.py  session.py
idl/python/dli/transport/: __init__.py  base.py  multicast.py
idl/python/dli/utils/: __init__.py  bam.py
idl/python/tests/: dependency_check.py  dependency_check_test.py  parser_test.py  runtime_surface_test.py  verify_python_dli.py
include/dli/: Bam.hpp  BitCursor.hpp  Dispatcher.hpp  DliHeader.hpp  DliMessage.hpp  DliSession.hpp  Endian.hpp  Scaled.hpp
include/dli/core/: Checksum.hpp  ErrorState.hpp  ILogger.hpp
include/dli/protocol/: Dispatcher.hpp  DliMessage.hpp  Profile.hpp
include/dli/session/: DliSession.hpp
include/dli/transport/: IPackingPolicy.hpp  ITransport.hpp  TransportCapabilities.hpp  UdpTransport.hpp
src/: multicast_bridge.cpp
src/protocol/: Dispatcher.cpp
src/session/: DliSession.cpp
src/transport/: UdpTransport.cpp
tests/: dependency_check.py  hello  parser_test.py  preprocessor_output.txt  protocol_test.cpp  session_test.cpp  test_inc.cpp  transport_test.cpp
tools/: full_verify.py
tools/find_package_smoke/: CMakeLists.txt  main.cpp
